Protéger les routes React par rôle.

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link id="icon" rel="icon" type="image/svg+xml" sizes="32x32" href="./src/assets/Company_logo_only-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <style>
+    #icon {
+      width: 400px;
+      height: auto;
+    }
+  </style>
   </head>
   <body>
     <div id="root"></div>
